assets/css/styles.css
/* Global */

html, body {
	width: 100%;
	height: 100%;
	margin: 0;
	padding: 0;
	font-family: "Source Sans Pro", "Segoe UI", sans-serif !important;
	overflow: hidden;
}

button {
	width: 204px;
	height: 62px;
	border: 3px solid white;
	background: rgba(0, 0, 0, 0.3);
	border: 3px solid white;
	padding: 0;
	font-size: 20px;
	font-family: "Source Sans Pro", "Segoe UI", sans-serif !important;
	color: white;
	outline: none;
}

button:active {
	background-color: white;
	color: #4b6a9b;
}

/* Fonts */

@font-face {
	font-family: "Source Sans Pro";
	font-weight: normal;
	font-style: normal;
	src: url('../fonts/SourceSansPro-Regular.ttf');
}

@font-face {
	font-family: "Source Sans Pro";
	font-weight: bold;
	font-style: normal;
	src: url('../fonts/SourceSansPro-Bold.ttf');
}

/* Question page */

.questionContainer {
	width: 1024px;
	height: 768px;
	color: white;
}

.question {
	width: 100%;
	height: 60px;
	margin: 120px 0 10px 0;
	padding: 0 50px;
	box-sizing: border-box;
	float: left;
	text-align: center;
	line-height: 60px;
	font-size: 32px;
	font-weight: bold;
}

.answerContainer {
	width: 100%;
	height: 360px;
	margin: auto;
	padding: 0 100px;
	display: flex;
	flex-wrap: wrap;
	flex-direction: row;
	justify-content: space-between;
	box-sizing: border-box;
}

.answer {
	flex-grow: 1;
	flex-basis: 200px;
	margin: 10px;
	justify-content: space-between;
	font-size: 20px;
	position: relative;
}

.romanticAnswer {
	background: url("../images/romantic/romanticAnswer.jpg");
}

.maryAnswer {
	background: url("../images/whichMary/maryAnswer.jpg");
}

.answerImage {
	width: 100%;
	height: 100%;
	position: absolute;
	z-index: 5;
	left: 0;
	top: 0;
	object-fit: cover;
}

.answerText {
	width: 100%;
	height: 100%;
	padding: 20px;
	box-sizing: border-box;
	position: absolute;
	z-index: 10;
	display: flex;
	justify-content: center;
	flex-direction: column;
	text-shadow: 2px 2px 10px black;
	text-align: center;
	font-size: 22px;
  white-space: pre-line;
}

.captions {
	line-height: 98%;
	padding-bottom: 8px;
	bottom: 0;
	z-index: 14;
	position: absolute;
	width: 100%;
	height: 60px;
	background-color: rgba(0,0,0, 0.5);
}

.answerBorder {
	width: 100%;
	height: 100%;
	position: absolute;
	z-index: 15;
	left: 0;
	top: 0;
	box-shadow: inset 0 0 0 3px white;
	transition: all ease 0.3s;
}

.selected {
	box-shadow: inset 0 0 0 10px #ffb81c;
}

.buttonContainer {
	width: 100%;
	margin: 20px 0;
	padding: 0 calc(100px + 10px);
	box-sizing: border-box;
	display: flex;
	flex-direction: row;
	justify-content: space-between;
}

/* Progress Bar */

.progressContainer {
	width: calc(100% - 100px);
	height: 100px;
	margin: 20px 50px 0 50px;
	float: left;
}

.leftBracket {
    float: left;
}

.progressBar {
	width: calc(100% - (35px * 2));
    height: 49px;
	padding: 0 1.4px;
	float: left;
	display: flex;
    flex-direction: row;
    justify-content: center;
    box-sizing: border-box;
}

.progressLine {
	margin-top: 1px;
	float: left;
	box-sizing: border-box;
    flex-grow: 1;
	background: #eef0f4;
	box-shadow: 0 0 0.4px 1.8px #eef0f4;
	align-self: center;
}

.progressPoint {
    height: 8px;
    width: 8px;
	border: 3px solid #eef0f4;
    border-radius: 100%;
    float: left;
	align-self: center;
}

.questionPoint {
	border: 8px solid #eef0f4;
}

.rightBracket {
    float: right;
}

.numberDiv {
    width: 80px;
	height: 40px;
	margin-left: calc(-40px + (24px / 2));
	margin-top: 34px;
	position: absolute;
    background: #FEFEFE;
    line-height: 40px;
	text-align: center;
	font-size: 26px;
	font-weight: bold;
}

.maryNumber {
	color: #4b6a9b;
}

.romanticNumber {
	color: #595959;
}

/* Choose Quiz Page */

.chooseQuizContainer {
	width: 1024px;
	height: 768px;
	float: left;
	background: url("../images/ChooseQuiz.png");
}

.description {
	width: 50%;
	height: 100%;
	padding: 270px 50px 150px 50px;
	box-sizing: border-box;
	float: left;
	text-align: center;
	color: white;
	display: flex;
	flex-direction: column;
}

.description h2 {
	margin: 0;
	font-size: 40px;
}

.description p {
	flex-grow: 1;
	font-size: 24px;
    width: 420px;
}

.description button {
	margin: auto;
	align-self: flex-end;
}

/* Quiz description page */

.backgroundMaryDescription {
	width: 1024px;
	height: 768px;
	padding-top: 400px;
	box-sizing: border-box;
	background: url("../images/summary.png");
}

.backgroundRomanticDescription {
	width: 1024px;
	height: 768px;
	padding-top: 400px;
	box-sizing: border-box;
	background: url("../images/romanticDescription.png");
}

.quizDescription {
	width: 100%;
	padding: 0 160px;
	box-sizing: border-box;
	float: left;
	font-size: 24px;
	color: white;
	text-align: center;
	white-space: pre-line;
}

.quizDescNav {
	width: 100%;
	margin-top: 60px;
	padding: 0 160px;
	box-sizing: border-box;
	float: left;
	display: flex;
	justify-content: space-between;
}

.romanticButton:active {
	background-color: white;
	color: #595959;
}

.navButton {
	width: 146px;
}

/* MISCELLANEOUS THINGS THAT NEED TO BE ORGANIZED */

.chooseButton {
	width: 160px;
	height: 90px;
	border-radius: 10px;
	background-color: white;
	border: 1px solid;
	font-size: 20px;
}

.chooseQuiz {
	margin: 0 auto;
	padding: 0;
}

#quitContainer {
	margin: auto;
	width: 360px;
}

#anotherQuizButton {
	float: right;
}

/* Results page */

.resultsDescription {
	width: 100%;
	height: 480px;
	padding: 0 60px;
	float: left;
	top: 150px;
	position: relative;
	box-sizing: border-box;
	font-size: 24px;
	color: white;
}

#shareResultsButton {
	float: right;
	margin-left: 18px;
}

.resultsButtonContainer {
	width: 95%;
	padding-right: 5%;
	height: 90px;
}

.sentButtonContainer {
	width: 360px;
	margin: auto;
}

.sentButtonContainer button {
	margin-left: 10px;
	margin-right: 10px;
}

.quote {
	font-style: italic;
}

.maryName {
    font-style: normal;
}

/* Share Results */

.shareResultsForm {
	width: 700px;
	margin: 0 auto;
	padding-top: 160px;
	box-sizing: border-box;
}

.inputContainer {
	width: 100%;
	height: 96px;
	float: left;
}
/* ... */

